fix: bin z-index rubbish
Fixes #293

--- a/src/helpers/optionFields.less
+++ b/src/helpers/optionFields.less
@@ -6,10 +6,6 @@
   column-gap: 12px;
   row-gap: 4px;
 
-  // Show above custom checkboxes
-  position: relative;
-  z-index: 10;
-
   > :first-of-type {
     flex-grow: 1;
     min-width: 150px;
